Allow to connect to telegram
+ Requires a telegram bot api token
+ pigeon relies on an existing telegram bot api
+ bot token can be either stored as ENV variable or via config
+ added hello world example (start and stop) - no auth. currently

--- a/data/pigeon_config.example.yml
+++ b/data/pigeon_config.example.yml
@@ -27,6 +27,9 @@ prod_password: this_is_for_sure_the_qsa_pw
 #   will use the secret pigeon
 prod_secret: da_real_pigeon_secret
 
+
+telegram_token: your_telegram_bot_token
+
 # IP address of the production server that our bot wants connect onto.
 # Example:
 #   prod_ip: 127.0.0.1
